--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,12 @@
 ; PlatformIO Project Configuration File
-; Please visit documentation: https://docs.platformio.org/page/projectconf.html
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
 src_dir = ./wled00
@@ -37,25 +44,7 @@ build_flags =
 
 # TODO replace libs in /lib with managed libs in here if possible.
 # If they are not changed it's just a matter of setting the correct version and change the import statement
-lib_deps_external =
-  #Blynk@0.5.4(changed)
-  #E131@1.0.0(changed)
-  FastLED@3.3.2
-  NeoPixelBus@2.5.6
-  ESPAsyncTCP@1.2.0
-  ESPAsyncUDP@697c75a025
-  AsyncTCP@1.0.3
-  Esp Async WebServer@1.2.0
-  #ArduinoJson@5.13.5
-  #IRremoteESP8266@2.7.2
-  https://github.com/crankyoldgit/IRremoteESP8266.git
-  #Time@1.5
-  #Timezone@1.2.1
-  #For use SSD1306 OLED display uncomment following
-  #U8g2@~2.27.2
-  #For Dallas sensor uncomment following 2 lines
-  #DallasTemperature@~3.8.0
-  #OneWire@~2.3.5
+  
 [common:esp8266]
 # ------------------------------------------------------------------------------
 # PLATFORM:
@@ -126,9 +115,6 @@ framework = ${common.framework}
 build_flags =
   ${common.build_flags}
   ${common:esp8266.build_flags}
-lib_deps =
-  ${common.lib_deps_external}
-
 [env:d1_mini]
 board = d1_mini
 platform = ${common:esp8266.platform}
